fix: login form input field overflow

--- a/client/src/components/Auth/LoginForm.module.css
+++ b/client/src/components/Auth/LoginForm.module.css
@@ -31,7 +31,7 @@
     display: block;
     font-size: 20px;
     padding: 5px;
-    width: 100%;
+    width: 95%;
 }
 
 .form_container .title {
